agent: update mandatory runner params for jdk25+